--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.3.1",
     "csv-split-stream": "^1.0.2",
     "follow-redirect-url": "^2.0.1",
+    "follow-redirects": "^1.15.2",
     "read-excel-file": "^5.5.3",
     "write-excel-file": "^1.4.14"
   }
