--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "untitled-folder",
   "version": "1.0.0",
   "description": "",
-  "main": "Server.js",
+  "main": "Server1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server1.js"
   },
   "keywords": [],
   "author": "",
